{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 109,
  "lineage": "aee355b8-6b99-d9b5-97b7-78205fe99e04",
  "resources": [
    {
      "module": "module.anthos_cluster.module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.0.1",
            "id": "projects/bu1-p-app1-1961/regions/europe-west1/subnetworks/bu1-app1-euw1",
            "ip_cidr_range": "10.0.0.0/18",
            "name": "bu1-app1-euw1",
            "network": "https://www.googleapis.com/compute/v1/projects/bu1-p-app1-1961/global/networks/bu1-app1-vpc",
            "private_ip_google_access": true,
            "project": "bu1-p-app1-1961",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/24",
                "range_name": "bu1-app1-cluster1-pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/19",
                "range_name": "bu1-app1-cluster1-svc"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bu1-p-app1-1961/regions/europe-west1/subnetworks/bu1-app1-euw1"
          }
        }
      ]
    },
    {
      "module": "module.anthos_cluster.module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "ah"
              },
              {
                "ports": [],
                "protocol": "esp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "sctp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-01-25T03:15:57.824-08:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow pods to communicate with each other and the master",
            "destination_ranges": [
              "10.0.0.0/18",
              "10.1.0.0/24",
              "192.168.0.0/28"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bu1-p-app1-1961/global/firewalls/gke-bu1-app1-cluster1-intra-cluster-egress",
            "log_config": [],
            "name": "gke-bu1-app1-cluster1-intra-cluster-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/bu1-p-app1-1961/global/networks/bu1-app1-vpc",
            "priority": 1000,
            "project": "bu1-p-app1-1961",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bu1-p-app1-1961/global/firewalls/gke-bu1-app1-cluster1-intra-cluster-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-bu1-app1-cluster1"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.bu1-prod-app1.module.project-factory.google_compute_shared_vpc_service_project.shared_vpc_attachment",
            "module.bu1-prod-app1.module.project-factory.google_project.main",
            "module.bu1-prod-app1.module.project-factory.module.project_services.google_project_service.project_services",
            "module.bu1-prod-app1.module.project-factory.null_resource.preconditions",
            "module.bu1-prod-app1.module.project-factory.random_id.random_project_id_suffix",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.anthos_cluster.module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8443",
                  "9443",
                  "15017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-01-25T03:15:23.519-08:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow master to hit pods for admission controllers/webhooks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bu1-p-app1-1961/global/firewalls/gke-bu1-app1-cluster1-webhooks",
            "log_config": [],
            "name": "gke-bu1-app1-cluster1-webhooks",
            "network": "https://www.googleapis.com/compute/v1/projects/bu1-p-app1-1961/global/networks/bu1-app1-vpc",
            "priority": 1000,
            "project": "bu1-p-app1-1961",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bu1-p-app1-1961/global/firewalls/gke-bu1-app1-cluster1-webhooks",
            "source_ranges": [
              "192.168.0.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-bu1-app1-cluster1"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.bu1-prod-app1.module.project-factory.google_compute_shared_vpc_service_project.shared_vpc_attachment",
            "module.bu1-prod-app1.module.project-factory.google_project.main",
            "module.bu1-prod-app1.module.project-factory.module.project_services.google_project_service.project_services",
            "module.bu1-prod-app1.module.project-factory.null_resource.preconditions",
            "module.bu1-prod-app1.module.project-factory.random_id.random_project_id_suffix",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/bu1-p-app1-1961/global/networks/bu1-app1-vpc",
            "mtu": 0,
            "name": "bu1-app1-vpc",
            "project": "bu1-p-app1-1961",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bu1-p-app1-1961/global/networks/bu1-app1-vpc"
          },
          "dependencies": [
            "module.bu1-prod-app1.module.project-factory.google_compute_shared_vpc_service_project.shared_vpc_attachment",
            "module.bu1-prod-app1.module.project-factory.google_project.main",
            "module.bu1-prod-app1.module.project-factory.module.project_services.google_project_service.project_services",
            "module.bu1-prod-app1.module.project-factory.null_resource.preconditions",
            "module.bu1-prod-app1.module.project-factory.random_id.random_project_id_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "europe-west1/bu1-app1-euw1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-01-25T03:15:25.410-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/bu1-p-app1-1961/regions/europe-west1/subnetworks/bu1-app1-euw1",
            "ip_cidr_range": "10.0.0.0/18",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "bu1-app1-euw1",
            "network": "https://www.googleapis.com/compute/v1/projects/bu1-p-app1-1961/global/networks/bu1-app1-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "bu1-p-app1-1961",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/24",
                "range_name": "bu1-app1-cluster1-pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/19",
                "range_name": "bu1-app1-cluster1-svc"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bu1-p-app1-1961/regions/europe-west1/subnetworks/bu1-app1-euw1"
          },
          "dependencies": [
            "module.bu1-prod-app1.module.project-factory.google_compute_shared_vpc_service_project.shared_vpc_attachment",
            "module.bu1-prod-app1.module.project-factory.google_project.main",
            "module.bu1-prod-app1.module.project-factory.module.project_services.google_project_service.project_services",
            "module.bu1-prod-app1.module.project-factory.null_resource.preconditions",
            "module.bu1-prod-app1.module.project-factory.random_id.random_project_id_suffix",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}